force-app/main/default/objects/Cruise__c/fields/Account_Email__c.field-meta.xml
<CustomField>
    <fullName>Account_Email__c</fullName>
    <label>אימייל תלמיד/חבר מועדון</label>
    <type>Email</type>
</CustomField>