force-app/main/default/objects/Cruise__c/fields/AddingReducingPoints__c.field-meta.xml
<CustomField>
    <fullName>AddingReducingPoints__c</fullName>
    <label>הוספת/הורדת נקודות ידנית</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>