force-app/main/default/objects/Cruise__c/fields/Additional_Info__c.field-meta.xml
<CustomField>
    <fullName>Additional_Info__c</fullName>
    <label>מידע נוסף למשתתפים</label>
    <type>TextArea</type>
</CustomField>