force-app/main/default/objects/Cruise__c/fields/Boat__c.field-meta.xml
<CustomField>
    <fullName>Boat__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>סירה</label>
    <referenceTo>Boats__c</referenceTo>
    <relationshipLabel>הפלגות</relationshipLabel>
    <relationshipName>Boat</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>