force-app/main/default/objects/Cruise__c/fields/cancel_cruises__c.field-meta.xml
<CustomField>
    <fullName>cancel_cruises__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ביטול הפלגות</label>
    <type>Checkbox</type>
</CustomField>