force-app/main/default/objects/Cruise__c/fields/Co_Cruise__c.field-meta.xml
<CustomField>
    <fullName>Co_Cruise__c</fullName>
    <defaultValue>false</defaultValue>
    <label>הפלגה חברתית</label>
    <type>Checkbox</type>
</CustomField>