force-app/main/default/objects/Cruise__c/fields/Course_Type__c.field-meta.xml
<CustomField>
    <fullName>Course_Type__c</fullName>
    <label>Course Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>קורס 7 מטר</fullName>
            </value>
            <value>
                <fullName>30 קורס משיט</fullName>
            </value>
            <value>
                <fullName>IYT קורס</fullName>
            </value>
            <value>
                <fullName>כללי</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>