force-app/main/default/objects/Cruise__c/fields/Credit_details__c.field-meta.xml
<CustomField>
    <fullName>Credit_details__c</fullName>
    <label>פרטי אשראי</label>
    <type>TextArea</type>
</CustomField>