force-app/main/default/objects/Cruise__c/fields/cruise_time_formula__c.field-meta.xml
<CustomField>
    <fullName>cruise_time_formula__c</fullName>
    <formula>RIGHT(&quot;0&quot; &amp; TEXT(HOUR(TIMEVALUE(Start_Date__c + (3/24)))), 2) &amp;
&quot;:&quot; &amp;
RIGHT(&quot;0&quot; &amp; TEXT(MINUTE(TIMEVALUE(Start_Date__c + (3/24)))), 2) &amp;
&quot;-&quot; &amp;
RIGHT(&quot;0&quot; &amp; TEXT(HOUR(TIMEVALUE(End_Date__c + (3/24)))), 2) &amp;
&quot;:&quot; &amp;
RIGHT(&quot;0&quot; &amp; TEXT(MINUTE(TIMEVALUE(End_Date__c + (3/24)))), 2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>שעות הפלגה (נוסחה)</label>
    <type>Text</type>
</CustomField>