force-app/main/default/objects/Cruise__c/fields/Cruise_Type__c.field-meta.xml
<CustomField>
    <fullName>Cruise_Type__c</fullName>
    <label>סוג הפלגה</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Maintenance</fullName>
                <label>אחזקה</label>
            </value>
            <value>
                <fullName>Skill</fullName>
                <label>הכרות</label>
            </value>
            <value>
                <fullName>Certification</fullName>
                <label>הסמכה</label>
            </value>
            <value>
                <fullName>Enriching</fullName>
                <label>העשרה</label>
            </value>
            <value>
                <fullName>Renting</fullName>
                <label>השכרה</label>
            </value>
            <value>
                <fullName>Abroad</fullName>
                <label>חו&quot;ל</label>
            </value>
            <value>
                <fullName>General</fullName>
                <label>כללי</label>
            </value>
            <value>
                <fullName>Club</fullName>
                <label>מועדון</label>
            </value>
            <value>
                <fullName>Course</fullName>
                <label>קורס</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>