force-app/main/default/objects/Cruise__c/fields/DATE__c.field-meta.xml
<CustomField>
    <fullName>DATE__c</fullName>
    <label>DATE</label>
    <type>DateTime</type>
</CustomField>