force-app/main/default/objects/Cruise__c/fields/Decline_Reason__c.field-meta.xml
<CustomField>
    <fullName>Decline_Reason__c</fullName>
    <label>סיבת דחיה</label>
    <length>100</length>
    <type>Text</type>
</CustomField>