force-app/main/default/objects/Cruise__c/fields/Dock_Duty__c.field-meta.xml
<CustomField>
    <fullName>Dock_Duty__c</fullName>
    <label>תורנות רציף</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>