force-app/main/default/objects/Cruise__c/fields/Employee_Email__c.field-meta.xml
<CustomField>
    <fullName>Employee_Email__c</fullName>
    <label>אימייל מדריך</label>
    <type>Email</type>
</CustomField>