force-app/main/default/objects/Cruise__c/fields/Extra_Hours_Charge__c.field-meta.xml
<CustomField>
    <fullName>Extra_Hours_Charge__c</fullName>
    <label>Extra Hours Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>