force-app/main/default/objects/Cruise__c/fields/EXTRAS__c.field-meta.xml
<CustomField>
    <fullName>EXTRAS__c</fullName>
    <defaultValue>&quot;שמפניה, מים, נשנושים&quot;</defaultValue>
    <label>תוספות להפלגה</label>
    <type>TextArea</type>
</CustomField>