force-app/main/default/objects/Cruise__c/fields/fitting_time_to_daylight__c.field-meta.xml
<CustomField>
    <fullName>fitting_time_to_daylight__c</fullName>
    <defaultValue>1</defaultValue>
    <inlineHelpText>התאמת הזמנים בשעון קיץ צריך להיות ערך 1 ובשעון חורף ערך של 0 על מנת שהשעת התחלה באימיילים יהיו תקינים</inlineHelpText>
    <label>Adjusting time to daylight</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>