force-app/main/default/objects/Cruise__c/fields/For_Club_Members_Only__c.field-meta.xml
<CustomField>
    <fullName>For_Club_Members_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <label>For Club Members Only</label>
    <type>Checkbox</type>
</CustomField>