force-app/main/default/objects/Cruise__c/fields/GuideEmailForSMS__c.field-meta.xml
<CustomField>
    <fullName>GuideEmailForSMS__c</fullName>
    <label>מייל מדריך לשליחת SMS</label>
    <type>Email</type>
</CustomField>