force-app/main/default/objects/Cruise__c/fields/Hidden_Total_Hours__c.field-meta.xml
<CustomField>
    <fullName>Hidden_Total_Hours__c</fullName>
    <formula>(floor(( End_Date__c - Start_Date__c )*24)) 
+ 

ROUND(MOD((End_Date__c - Start_Date__c)*1440,60),0)/60
+ 

Extra_Hours_Charge__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>סה&quot;כ שעות הפלגה</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>