force-app/main/default/objects/Cruise__c/fields/Instructor_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Instructor_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Instructor Email Sent</label>
    <type>Checkbox</type>
</CustomField>