force-app/main/default/objects/Cruise__c/fields/IsPrivateCourse__c.field-meta.xml
<CustomField>
    <fullName>IsPrivateCourse__c</fullName>
    <defaultValue>false</defaultValue>
    <label>האם קורס פרטי</label>
    <type>Checkbox</type>
</CustomField>