force-app/main/default/objects/Cruise__c/fields/key_location__c.field-meta.xml
<CustomField>
    <fullName>key_location__c</fullName>
    <formula>Boat__r.KEY__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>key location</label>
    <type>Text</type>
</CustomField>