force-app/main/default/objects/Cruise__c/fields/lesson_details__c.field-meta.xml
<CustomField>
    <fullName>lesson_details__c</fullName>
    <label>תוכן שיעור</label>
    <type>TextArea</type>
</CustomField>