force-app/main/default/objects/Cruise__c/fields/Marina__c.field-meta.xml
<CustomField>
    <fullName>Marina__c</fullName>
    <formula>TEXT(Boat__r.Docking__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>מרינה</label>
    <type>Text</type>
</CustomField>