force-app/main/default/objects/Cruise__c/fields/max_people__c.field-meta.xml
<CustomField>
    <fullName>max_people__c</fullName>
    <label>מספר מפליגים מקסימלי</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>