force-app/main/default/objects/Cruise__c/fields/MaxParticipants__c.field-meta.xml
<CustomField>
    <fullName>MaxParticipants__c</fullName>
    <defaultValue>if ( $RecordType.DeveloperName  == &apos;Enriching&apos;,7,if($RecordType.DeveloperName  == &apos;Course&apos;,3, If($RecordType.DeveloperName  == &apos;Certification&apos;,3,If ($RecordType.DeveloperName  == &apos;Friends&apos;,8,0))))</defaultValue>
    <label>מספר משתתפים מקסימלי</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>