force-app/main/default/objects/Cruise__c/fields/need_skipper__c.field-meta.xml
<CustomField>
    <fullName>need_skipper__c</fullName>
    <defaultValue>false</defaultValue>
    <label>דרוש סקיפר</label>
    <type>Checkbox</type>
</CustomField>