force-app/main/default/objects/Cruise__c/fields/Override_Validation__c.field-meta.xml
<CustomField>
    <fullName>Override_Validation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>הרשאות שמירה</label>
    <type>Checkbox</type>
</CustomField>