force-app/main/default/objects/Cruise__c/fields/PAYMENT__c.field-meta.xml
<CustomField>
    <fullName>PAYMENT__c</fullName>
    <label>אופן התשלום</label>
    <type>TextArea</type>
</CustomField>