force-app/main/default/objects/Cruise__c/fields/Payment_Required_Image__c.field-meta.xml
<CustomField>
    <fullName>Payment_Required_Image__c</fullName>
    <formula>IF( Payment_Required__c =true, (IMAGE(&quot;/servlet/servlet.FileDownload?file=0150Y000002Iyn3&quot;, &quot;Red&quot; , 100, 100)),IMAGE(&quot;/servlet/servlet.FileDownload?file=0150Y000002Iymt&quot;, &quot;Green&quot;, 30, 30))</formula>
    <label>יתרת שעות בכרטיסיה</label>
    <type>Text</type>
</CustomField>