force-app/main/default/objects/Cruise__c/fields/pier__c.field-meta.xml
<CustomField>
    <fullName>pier__c</fullName>
    <formula>Boat__r.DOCK__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>pier</label>
    <type>Text</type>
</CustomField>