force-app/main/default/objects/Cruise__c/fields/RemaingSeatsInBoat__c.field-meta.xml
<CustomField>
    <fullName>RemaingSeatsInBoat__c</fullName>
    <formula>MaxParticipants__c - SCCounts__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RemaingSeatsInBoat</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>