force-app/main/default/objects/Cruise__c/fields/saildate__c.field-meta.xml
<CustomField>
    <fullName>saildate__c</fullName>
    <formula>DATEVALUE( Start_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>תאריך הפלגה</label>
    <type>Date</type>
</CustomField>