force-app/main/default/objects/Cruise__c/fields/SailStartMonthYear__c.field-meta.xml
<CustomField>
    <fullName>SailStartMonthYear__c</fullName>
    <formula>TEXT(MONTH(DATEVALUE(Start_Date__c)))+ &apos;-&apos; + TEXT(YEAR(DATEVALUE(Start_Date__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SailStartMonthYear</label>
    <type>Text</type>
</CustomField>