force-app/main/default/objects/Cruise__c/fields/skill_level__c.field-meta.xml
<CustomField>
    <fullName>skill_level__c</fullName>
    <formula>text(AccountName__r.skill_level__c)</formula>
    <inlineHelpText>רמת הפלגה</inlineHelpText>
    <label>skill level</label>
    <type>Text</type>
</CustomField>