force-app/main/default/objects/Cruise__c/fields/Skipper__c.field-meta.xml
<CustomField>
    <fullName>Skipper__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Skipper</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>הפלגות (Skipper)</relationshipLabel>
    <relationshipName>Cruise</relationshipName>
    <type>Lookup</type>
</CustomField>