force-app/main/default/objects/Cruise__c/fields/Skipper_Email__c.field-meta.xml
<CustomField>
    <fullName>Skipper_Email__c</fullName>
    <label>Skipper Email</label>
    <type>Email</type>
</CustomField>