force-app/main/default/objects/Cruise__c/fields/Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Time__c</fullName>
    <formula>DATETIMEVALUE(Start_Date__c + ( fitting_time_to_daylight__c /24))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Start Time</label>
    <type>DateTime</type>
</CustomField>