force-app/main/default/objects/Cruise__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>סוג הסירה</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>מפרשית</fullName>
            </value>
            <value>
                <fullName>יאכטה</fullName>
            </value>
            <value>
                <fullName>קטמרן</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>