force-app/main/default/objects/Cruise__c/fields/type_of_enriching__c.field-meta.xml
<CustomField>
    <fullName>type_of_enriching__c</fullName>
    <label>סוג מודרכת</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>בית ספר</fullName>
            </value>
            <value>
                <fullName>מועדון</fullName>
            </value>
            <value>
                <fullName>תאוריה</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>