force-app/main/default/objects/Cruise__c/fields/Yahoo_Calendar_Link__c.field-meta.xml
<CustomField>
    <fullName>Yahoo_Calendar_Link__c</fullName>
    <formula>&apos;http://calendar.yahoo.com/?v=60&amp;TITLE=הפלגה על היאכטה &apos;+ Boat__r.Name +&apos;&amp;ST=&apos;+Start_Date_for_Calendar__c+ &apos;00Z/&apos;+ Boat__r.Name +&apos;&amp;in_loc=Seatime&amp;DESC=נא להגיע בזמן&amp;TYPE=26&amp;DUR=&apos;+Duration_HHMM__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Yahoo Calendar Link</label>
    <type>Text</type>
</CustomField>