force-app/main/default/objects/Cruise__c/recordTypes/Abroad.recordType-meta.xml
<RecordType>
    <fullName>Abroad</fullName>
    <active>true</active>
    <label>Abroad</label>
</RecordType>