force-app/main/default/objects/Cruise__c/recordTypes/Introduction.recordType-meta.xml
<RecordType>
    <fullName>Introduction</fullName>
    <active>true</active>
    <label>Introduction</label>
</RecordType>