force-app/main/default/objects/Cruise__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Cruise_Type__c</columns>
    <columns>AccountName__c</columns>
    <columns>Guide__c</columns>
    <columns>Status__c</columns>
    <columns>Boat__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Cruise__c.Enriching</value>
    </filters>
    <label>כל ההפלגות</label>
</ListView>