force-app/main/default/objects/Cruise__c/listViews/courses_sails.listView-meta.xml
<ListView>
    <fullName>courses_sails</fullName>
    <columns>NAME</columns>
    <columns>AccountName__c</columns>
    <columns>Cruise_Purpose__c</columns>
    <columns>Type__c</columns>
    <columns>Status__c</columns>
    <columns>Boat__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Payment_Required__c</columns>
    <columns>Payment_Required_Image__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Cruise__c.Course,Cruise__c.General</value>
    </filters>
    <label>הפלגות קורסים</label>
    <language>en_US</language>
</ListView>