force-app/main/default/objects/Cruise__c/listViews/EnrichingFriends.listView-meta.xml
<ListView>
    <fullName>EnrichingFriends</fullName>
    <columns>NAME</columns>
    <columns>saildate__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Additional_Info__c</columns>
    <columns>Guide__c</columns>
    <columns>RemaingSeatsInBoat__c</columns>
    <columns>Boat__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Start_Date__c</field>
        <operation>greaterThan</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Cruise__c.Friends,Cruise__c.Enriching</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Canceled</value>
    </filters>
    <label>מודרכות וחברים</label>
</ListView>