force-app/main/default/objects/Cruise__c/listViews/View1.listView-meta.xml
<ListView>
    <fullName>View1</fullName>
    <columns>NAME</columns>
    <columns>AccountName__c</columns>
    <columns>Status__c</columns>
    <columns>Boat__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Payment_Required__c</columns>
    <columns>information__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>equals</operation>
        <value>Booking Portal Site Guest User,seaTimeApp Site Guest User</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Awaiting for Approval,For Payment,No Qualification</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Cruise__c.Club</value>
    </filters>
    <filters>
        <field>Start_Date__c</field>
        <operation>greaterThan</operation>
        <value>8/8/2022 12:00 AM</value>
    </filters>
    <label>הפלגות ממתינות לאישור</label>
</ListView>